Feature-complete version (before Sonar)