@@ -4,15 +4,19 @@ import de.fraunhofer.aisec.cpg.graph.Node;
 import de.jplag.java_cpg.transformation.matching.edges.CpgEdge;
 import de.jplag.java_cpg.transformation.matching.edges.CpgMultiEdge;
 import de.jplag.java_cpg.transformation.matching.edges.CpgPropertyEdge;
+import de.jplag.java_cpg.transformation.matching.pattern.NodePattern.ForAllRelatedNode;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.*;
 import java.util.function.Predicate;
 
 /**
- * Abstract builder class for {@link SimpleGraphPattern}s, offering convenience methods.
+ * Abstract builder class for {@link GraphPattern}s, offering convenience methods.
  */
 public abstract class GraphPatternBuilder {
+    /**
+     * A registry for {@link NodePattern}s, which may be re-referenced after their creation.
+     */
     private final PatternRegistry patterns;
 
     /**
@@ -22,18 +26,46 @@ public abstract class GraphPatternBuilder {
         this.patterns = new PatternRegistry();
     }
 
+    /**
+     * Creates a {@link NodePattern} of the given {@link Node} {@link Class}.
+     *
+     * @param tClass        the class of the represented {@link Node}
+     * @param id            an identifier for this {@link NodePattern}
+     * @param patterns      the pattern registry as in-out parameter
+     * @param modifications the modifications to be applied to the new {@link NodePattern}
+     * @param <T>           the {@link Node} type of the represented {@link Node}
+     * @return the node pattern
+     */
     @NotNull
-    private static <T extends Node> NodePattern<T> createNodePattern(Class<T> tClass, String id, PatternRegistry patterns, List<PatternModification<? super T>> modifications) {
+    private static <T extends Node> NodePattern<T> createNodePattern(Class<T> tClass, String id, PatternRegistry patterns,
+                                                                     List<PatternModification<? super T>> modifications) {
         NodePattern<T> related = NodePattern.forNodeType(tClass);
         patterns.put(id, related);
         modifications.forEach(m -> m.apply(related, patterns));
         return related;
     }
 
+    /**
+     * Creates a {@link PatternModification} that adds the {@link MatchProperty} to a {@link NodePattern} that a specific attribute of a matching {@link Node} must be equal to the same attribute of another {@link Node}.
+     *
+     * @param propertyEdge the property edge
+     * @param otherId      the identifier of the other {@link NodePattern}
+     * @param <S>          the {@link Node} type
+     * @param <P>          the attribute type
+     * @return the {@link PatternModification}
+     */
     public static <S extends Node, P> PatternModification<S> equalAttributes(CpgPropertyEdge<S, P> propertyEdge, String otherId) {
         return new AddEqualAttributes<>(propertyEdge, otherId);
     }
 
+    /**
+     * Creates a {@link PatternModification} that adds the {@link MatchProperty} to a {@link NodePattern} that the assigned value is unchanged between the evaluation of the two given {@link Node}s.
+     *
+     * @param startId the identifier of the starting node id
+     * @param endId   the identifier of the end node id
+     * @param <S>     the type of
+     * @return the {@link PatternModification}
+     */
     public static <S extends Node> PatternModification<S> assignedValueStableBetween(String startId, String endId) {
         return new AddAssignedValueStableBetween<>(startId, endId);
     }
@@ -43,7 +75,8 @@ public abstract class GraphPatternBuilder {
     }
 
     /**
-     * Builds a {@link SimpleGraphPattern}. The specifics of the structure of the SimpleGraphPattern are defined in the concrete subclasses of {@link GraphPatternBuilder}.
+     * Builds a {@link SimpleGraphPattern}. The specifics of the structure of the SimpleGraphPattern are defined in the
+     * concrete subclasses of {@link GraphPatternBuilder}.
      *
      * @return the graph pattern
      */
@@ -72,87 +105,55 @@ public abstract class GraphPatternBuilder {
     }
 
     /**
-     * Convenience method to create a {@link WildcardGraphPattern} with the specified child {@link NodePattern}.
+     * Creates an empty {@link WildcardGraphPattern}. It can be used as a target pattern for a {@link de.jplag.java_cpg.transformation.GraphTransformation} where a {@link Node} shall be removed.
      *
-     * @param tClass        the child {@link Node} class
-     * @param childId       the ID for the child pattern
-     * @param modifications a list of modifications targeting the child node pattern
-     * @param <T>           the child {@link Node} type
-     * @return the {@link WildcardGraphPattern}
+     * @return the wildcard graph pattern
      */
-    @SafeVarargs
-    public final <T extends Node> SimpleGraphPattern<Node> wildcardParent(Class<T> tClass, String childId, PatternModification<? super T>... modifications) {
-        NodePattern<T> child;
-        if (!patterns.containsPattern(childId)) {
-            child = createNodePattern(tClass, childId, patterns, Arrays.asList(modifications));
-        } else {
-            child = (NodePattern<T>) patterns.getPattern(childId);
-            Arrays.stream(modifications).forEach(m -> m.apply(child, patterns));
-        }
-        return new WildcardGraphPattern<>(tClass, child, patterns);
-    }
-
-    public final MultiGraphPattern multiRoot(SimpleGraphPattern<?>... subgraphs) {
-        return new MultiGraphPattern(List.of(subgraphs), patterns);
-    }
-
     protected SimpleGraphPattern<Node> emptyWildcardParent() {
         return new WildcardGraphPattern<>(Node.class, null, patterns);
     }
 
+    /**
+     * Creates a {@link PatternModification} that adds a {@link ForAllRelatedNode} to a {@link NodePattern}.
+     * @param multiEdge The multi edge
+     * @param cClass the concrete class object of the for-all related nodes
+     * @param id the identifier for the related nodes
+     * @param modifications the modifications for the created node pattern
+     * @return the pattern modification
+     * @param <T> the type of source node
+     * @param <R> the type of related node, defined by the edge
+     * @param <C> the concrete type of related node
+     */
     @SafeVarargs
-    public final <T extends Node, R extends Node, C extends R> PatternModification<T> related(CpgEdge<T, R> edge, Class<C> cClass, String id, PatternModification<? super C>... modifications) {
-        return new AddRelatedNode<>(edge, cClass, id, Arrays.asList(modifications));
-    }
-
-    @SafeVarargs
-    public final <T extends Node, R extends Node, C extends R> PatternModification<T> forAllRelated(CpgMultiEdge<T, R> multiEdge, Class<C> cClass, String id, PatternModification<? super C>... modifications) {
+    public final <T extends Node, R extends Node, C extends R> PatternModification<T> forAllRelated(CpgMultiEdge<T, R> multiEdge, Class<C> cClass,
+                                                                                                    String id, PatternModification<? super C>... modifications) {
         return new AddForAllRelated<>(multiEdge, cClass, id, Arrays.asList(modifications));
     }
 
     /**
-     * Creates a sourceGraph pattern modification that adds a new node pattern that is related to the
-     * reference node pattern via a 1:n relation.
+     * Creates a {@link MultiGraphPattern} from the given {@link SimpleGraphPattern}s.
      *
-     * @param edge          the edge type connecting the node patterns
-     * @param rClass        the class object indicating the specified target's class type
-     * @param id            the name of the new related node pattern
-     * @param modifications a list of modifications targeting the new node pattern
-     * @param <S>           the type of the source node pattern
-     * @param <T>           the type of the relation target, defined by the edge
-     * @param <C>           the concrete type of the related node pattern
-     * @return the pattern modification object
+     * @param subgraphs
+     * @return
      */
-    @SafeVarargs
-    public final <S extends Node, T extends Node, C extends T> PatternModification<S> related1ToN(CpgMultiEdge<S, T> edge, Class<C> rClass, String id, PatternModification<? super C>... modifications) {
-        return new AddRelated1ToNNode<>(edge, rClass, id, Arrays.asList(modifications));
+    public final MultiGraphPattern multiRoot(SimpleGraphPattern<?>... subgraphs) {
+        return new MultiGraphPattern(List.of(subgraphs), patterns);
     }
 
     /**
-     * Creates a {@link PatternModification} to add a 1:1 relation to an existing {@link NodePattern}.
-     *
-     * @param edge the edge establishing the relation
-     * @param id   the ID of the existing target {@link NodePattern}
-     * @param <S>  the target {@link Node} type
-     * @return the pattern modification
+     * Creates a {@link PatternListModification} that adds a {@link NodePattern} to a {@link NodeListPattern}.
+     * @param cClass the concrete class of the added NodePattern
+     * @param tClass the added node class as defined by the AST edge to the parent
+     * @param id the identifier for the node pattern
+     * @param modifications the modifications to be applied to the node
+     * @return the pattern list modification
+     * @param <T> the node type of the added node as defined by the edge
+     * @param <C> the concrete type of the added node
      */
     @SafeVarargs
-    public final <S extends Node, T extends Node, C extends T> PatternModification<S> relatedExisting(CpgEdge<S, T> edge, Class<C> cClass, String id, PatternModification<? super C>... modifications) {
-        return new AddRelatedExistingNode<>(edge, cClass, id, List.of(modifications));
-    }
-
-    /**
-     * Creates a {@link PatternModification} to add a 1:n relation to an existing {@link NodePattern}.
-     *
-     * @param edge the multi-edge establishing the relation
-     * @param id   the ID of the existing target {@link NodePattern}
-     * @param <T>  the target {@link Node} type
-     * @param <R>  the related {@link Node} type
-     * @return the pattern modification
-     */
-    @SafeVarargs
-    public final <T extends Node, R extends Node, C extends R> PatternModification<T> relatedExisting1ToN(CpgMultiEdge<T, R> edge, Class<C> cClass, String id, PatternModification<C>... modifications) {
-        return new AddRelatedExisting1ToNNode<>(edge, cClass, id, List.of(modifications));
+    public final <T extends Node, C extends T> PatternListModification<T> node(Class<C> cClass, Class<T> tClass, String id,
+                                                                               PatternModification<C>... modifications) {
+        return new AddNode<>(cClass, tClass, id, Arrays.asList(modifications));
     }
 
     /**
@@ -167,6 +168,45 @@ public abstract class GraphPatternBuilder {
     }
 
     /**
+
+     * Creates a {@link PatternModification} that adds a new node pattern that is related to the reference node pattern
+     * via a 1:n relation.
+     *
+     * @param edge          the edge type connecting the node patterns
+     * @param rClass        the class object indicating the specified target's class type
+     * @param id            the name of the new related node pattern
+     * @param modifications a list of modifications targeting the new node pattern
+     * @param <T>           the type of the source node pattern
+     * @param <R>           the type of the relation target, defined by the edge
+     * @param <C>           the concrete type of the related node pattern
+     * @return the pattern modification object
+     */
+    @SafeVarargs
+    public final <T extends Node, R extends Node, C extends R> PatternModification<T> related(CpgEdge<T, R> edge, Class<C> rClass, String id,
+                                                                                              PatternModification<? super C>... modifications) {
+        return new AddRelatedNode<>(edge, rClass, id, Arrays.asList(modifications));
+    }
+
+    /**
+     * Creates a {@link PatternModification} that adds a new node pattern that is related to the reference node pattern
+     * via a 1:n relation.
+     *
+     * @param edge          the edge type connecting the node patterns
+     * @param rClass        the class object indicating the specified target's class type
+     * @param id            the name of the new related node pattern
+     * @param modifications a list of modifications targeting the new node pattern
+     * @param <T>           the type of the source node pattern
+     * @param <R>           the type of the relation target, defined by the edge
+     * @param <C>           the concrete type of the related node pattern
+     * @return the pattern modification object
+     */
+    @SafeVarargs
+    public final <T extends Node, R extends Node, C extends R> PatternModification<T> related1ToN(CpgMultiEdge<T, R> edge, Class<C> rClass, String id,
+                                                                                                  PatternModification<? super C>... modifications) {
+        return new AddRelated1ToNNode<>(edge, rClass, id, Arrays.asList(modifications));
+    }
+
+    /**
      * Creates a {@link PatternModification} to add a sequence of related node pattern to a {@link NodePattern}.
      *
      * @param edge   the multi-edge establishing the relation
@@ -176,24 +216,47 @@ public abstract class GraphPatternBuilder {
      * @return the pattern modification
      */
     @SafeVarargs
-    public final <S extends Node, T extends Node, C extends T> PatternModification<S>
-            related1ToNSequence(CpgMultiEdge<S, T> edge, Class<C> cClass, PatternListModification<C>... modifications) {
+    public final <S extends Node, T extends Node, C extends T> PatternModification<S> related1ToNSequence(CpgMultiEdge<S, T> edge, Class<C> cClass,
+                                                                                                          PatternListModification<C>... modifications) {
         return new AddRelated1ToNSequence<>(edge, cClass, Arrays.asList(modifications));
     }
 
+    /**
+     * Creates a {@link PatternModification} to add a 1:1 relation to an existing {@link NodePattern}.
+     *
+     * @param edge the edge establishing the relation
+     * @param id   the ID of the existing target {@link NodePattern}
+     * @param <S>  the target {@link Node} type
+     * @return the pattern modification
+     */
     @SafeVarargs
-    public final <T extends Node, C extends T> PatternListModification<T>
-            node(Class<C> cClass, Class<T> tClass, String id, PatternModification<C>... modifications) {
-        return new AddNode<>(cClass, tClass, id, Arrays.asList(modifications));
-    }
-
-    public final <T extends Node> PatternModification<T> removeMatch(boolean disconnectEog) {
-        return new RemoveMatch<>(disconnectEog);
+    public final <S extends Node, T extends Node, C extends T> PatternModification<S> relatedExisting(CpgEdge<S, T> edge, Class<C> cClass, String id,
+                                                                                                      PatternModification<? super C>... modifications) {
+        return new AddRelatedExistingNode<>(edge, cClass, id, List.of(modifications));
     }
 
     /**
-     * Creates a {@link PatternModification} that sets a flag to indicate that the child patterns contained in this
-     * pattern are not relevant for the transformation calculation, but only for the pattern matching.
+     * Creates a {@link PatternModification} to add a 1:n relation to an existing {@link NodePattern}.
+     *
+     * @param edge the multi-edge establishing the relation
+     * @param id   the ID of the existing target {@link NodePattern}
+     * @param <T>  the target {@link Node} type
+     * @param <R>  the related {@link Node} type
+     * @return the pattern modification
+     */
+    @SafeVarargs
+    public final <T extends Node, R extends Node, C extends R> PatternModification<T> relatedExisting1ToN(CpgMultiEdge<T, R> edge, Class<C> cClass,
+                                                                                                          String id, PatternModification<C>... modifications) {
+        return new AddRelatedExisting1ToNNode<>(edge, cClass, id, List.of(modifications));
+    }
+
+    public final <T extends Node> PatternModification<T> setRepresentingNode() {
+        return new SetRepresentingNode();
+    }
+
+    /**
+     * Creates a {@link PatternModification} that sets a flag to indicate that the child patterns contained in this pattern
+     * are not relevant for the transformation calculation, but only for the pattern matching.
      *
      * @param <T>
      * @return the pattern modification
@@ -202,8 +265,26 @@ public abstract class GraphPatternBuilder {
         return new StopRecursion<>();
     }
 
-    public final <T extends Node> PatternModification<T> setRepresentingNode() {
-        return new SetRepresentingNode();
+    /**
+     * Convenience method to create a {@link WildcardGraphPattern} with the specified child {@link NodePattern}.
+     *
+     * @param tClass        the child {@link Node} class
+     * @param childId       the ID for the child pattern
+     * @param modifications a list of modifications targeting the child node pattern
+     * @param <T>           the child {@link Node} type
+     * @return the {@link WildcardGraphPattern}
+     */
+    @SafeVarargs
+    public final <T extends Node> WildcardGraphPattern<T> wildcardParent(Class<T> tClass, String childId,
+                                                                         PatternModification<? super T>... modifications) {
+        NodePattern<T> child;
+        if (!patterns.containsPattern(childId)) {
+            child = createNodePattern(tClass, childId, patterns, Arrays.asList(modifications));
+        } else {
+            child = (NodePattern<T>) patterns.getPattern(childId);
+            Arrays.stream(modifications).forEach(m -> m.apply(child, patterns));
+        }
+        return new WildcardGraphPattern<>(tClass, child, patterns);
     }
 
     /**
@@ -221,7 +302,6 @@ public abstract class GraphPatternBuilder {
         void apply(NodePattern<? extends T> target, PatternRegistry patterns);
 
     }
-
 
     public sealed interface PatternListModification<T extends Node> {
         void apply(NodeListPattern<T> target, PatternRegistry patterns);
@@ -315,6 +395,11 @@ public abstract class GraphPatternBuilder {
             modifications.forEach(m -> m.apply(related, patterns));
         }
     }
+    /**
+     * A {@link PatternModification} to add a required {@link Predicate} property to a NodePattern.
+     *
+     * @param <T> The target {@link Node} type
+     */
 
     static final class AddProperty<T extends Node> implements PatternModification<T> {
         private final Predicate<T> property;
@@ -405,7 +490,7 @@ public abstract class GraphPatternBuilder {
         private final List<PatternModification<? super C>> modifications;
 
         /**
-         * Creates a new {@link AddRelated1ToNNode} object.
+         * Creates a new {@link AddForAllRelated} object.
          *
          * @param edge          the edge connecting the source node with the target node
          * @param cClass        the concrete class of the target node
@@ -443,14 +528,6 @@ public abstract class GraphPatternBuilder {
             NodeListPattern<C> nodeList = new NodeListPattern<>(cClass);
             modifications.forEach(m -> m.apply(nodeList, patterns));
             target.addRelated1ToNSequence(nodeList, edge);
-        }
-    }
-
-    private record RemoveMatch<T extends Node>(boolean disconnectEog) implements PatternModification<T> {
-
-        @Override
-        public void apply(NodePattern<? extends T> target, PatternRegistry patterns) {
-            target.markForRemoval(disconnectEog);
         }
     }
 
